--- a/about.html
+++ b/about.html
@@ -49,14 +49,52 @@
 
 
 
-@media screen and (max-width:) {
-      .tail video{
-        width: 100%;
-        height: 400px;
+@media screen and (max-width: 768px) {
+    
+    /* 1. Stack the CEO images vertically */
+    .head {
+        flex-direction: column; 
+        height: auto; /* Allow the container to grow tall */
+        padding: 20px 0;
+    }
+
+    .head img {
+        width: 80%; /* Make images fill more of the phone screen */
+        margin-bottom: 20px;
+        height: auto;
+    }
+
+    /* 2. Fix the Video */
+    .tail {
+        height: auto;
+        padding: 10px;
+    }
+
+    .tail video {
+        width: 100%; /* Video fits the phone screen */
+        height: auto;
+    }
+
+    /* 3. Navigation links */
+    .nav {
         display: flex;
+        flex-wrap: wrap;
         justify-content: center;
+        gap: 10px;
+    }
+
+    .nav a {
+        padding: 8px 12px;
+        font-size: 14px;
+    }
+
+    /* 4. Marquee/Header */
+    h1 {
+        font-size: 20px;
     }
 }
+
+
 
 </style>
 
@@ -67,7 +105,7 @@
       <a href="index.html">HOME</a>  <a href="about.html"> ABOUT</a>  <a href="shop.html">SHOP</a>  <a href="contact.html">CONTACT</a> 
     </div>
 
-    <marquee behavior="alternate" scrollamount="30"  direction="right"><h1>CEO OF SHIMZY-WEARS</h1></marquee>
+    <marquee behavior="alternate"   direction="right"><h1>CEO OF SHIMZY-WEARS</h1></marquee>
     <div class="head">
         <img src="images/shimzy.jpg" alt="">
         <img src="images/shimzy3.jpg" alt="">
@@ -81,3 +119,6 @@
     
 </body>
 </html>
+
+
+<
