--- a/contact.html
+++ b/contact.html
@@ -82,16 +82,12 @@
         }
         button:hover { background-color: rgb(82, 82, 215); }
 
-
         @media screen and (max-width: 768px) {
-            .nav-bar { flex-direction: column; text-align: center; }
-            .product-grid {
-                grid-template-columns: 1fr; /* 1 column for Phone */
-                padding: 10px;
-            }
-            .product-card img { height: 400px; } /* Larger images for phone */
+            .nav-bar { flex-direction: column; gap: 10px; }
+            .info-container { flex-direction: column; } /* Stacks the boxes */
+            .contact-section { margin: 20px auto; }
         }
-        
+       
     </style>
 </head>
 <body>
@@ -140,3 +136,4 @@
 </body>
 
 </html>
+
