--- a/shop.html
+++ b/shop.html
@@ -64,14 +64,15 @@
             font-weight: bold;
         }
 
-
-        @media screen and (max-width:600) {
-            product-grid {
-            display: grid;
-            grid-template-columns: 1fr;
-            
+        @media screen and (max-width: 768px) {
+            .nav-bar { flex-direction: column; text-align: center; }
+            .product-grid {
+                grid-template-columns: 1fr; /* 1 column for Phone */
+                padding: 10px;
+            }
+            .product-card img { height: 400px; } /* Larger images for phone */
         }
-        }
+       
     </style>
 </head>
 <body>
@@ -159,4 +160,5 @@
     </div>
 
 </body>
+
 </html>
